<resources>
    <string name="app_name">UberRider</string>
    <string name="last_name">Last Name</string>
    <string name="register_text">Let\'s start with creating account</string>
    <string name="first_name">First Name</string>
    <string name="continue_text">Register</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_signOut">Sign Out</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">Map</string>
    <string name="permission_require">Permission Required</string>
    <string name="drivers_not_found">Drivers Not Found</string>
    <string name="key_not_found">Key not found</string>
</resources>